got the function to add class

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -76,11 +76,11 @@
 
             <div class="col col-60" id="tile-section">
             <div class="tile-section-border">
-              <span ng-repeat="row in rows">
+              <span ng-repeat="row in rows" ng-click="chosenTile()">
               <div class="tile" ng-repeat="col in columns"
-                ng-click="clickTile(board.symbols[col+row])">
+                ng-click="clickTile(board.symbols[col+row])" ng-class="class">
                   <!-- {{col}}{{row}} -->
-                  <span ng-show="filled_tiles.indexOf(col+row)!=-1" ng-click="chosenTile()">
+                  <span ng-show="filled_tiles.indexOf(col+row)!=-1">
                   {{ board.symbols[col+row].word }}<br>
                   <img src = "{{board.symbols[col+row].symbol.image}}"
                     style="width:40px;height:40px">
