--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -19,6 +19,8 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/boards.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
+    <script src="lib/ngDraggable/ngDraggable.js"></script>
   </head>
 
   <body ng-app="starter" ng-controller="BoardController">
