--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -19,10 +19,9 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/boards.js"></script>
-    <script type="text/javascript" src="js/controllers/reusedCtrl.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="starter" ng-controller="BoardController">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
