--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -22,7 +22,7 @@
     <script type="text/javascript" src="js/controllers/mainCtrl.js"></script>
   </head>
 
-  <body ng-app="starter" ng-controller="reusedCtrl">
+  <body ng-app="starter" ng-controller="mainCtrl">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
