changed it to mainCtrl

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -20,6 +20,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/boards.js"></script>
     <script type="text/javascript" src="js/controllers/mainCtrl.js"></script>
+    <script type="text/javascript" src="js/controllers/reusedCtrl.js"></script>
   </head>
 
   <body ng-app="starter" ng-controller="mainCtrl">
