--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -23,7 +23,7 @@
     <script type="text/javascript" src="js/controllers/reusedCtrl.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="starter" ng-controller="MainCtrl">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
