--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -21,7 +21,7 @@
     <script src="js/controllers/boards.js"></script>
   </head>
 
-  <body ng-app="starter" ng-controller="BoardController">
+  <body ng-app="starter">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
