--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -18,7 +18,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers/boards.js"></script>
+    <script src="js/controllers/mainCtrl.js"></script>
   </head>
 
   <body ng-app="starter">
