--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -19,9 +19,10 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/mainCtrl.js"></script>
+    <script src="js/controllers/aacService.js"></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="main">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
