created settings controller, attached and made work

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -19,6 +19,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/mainCtrl.js"></script>
+     <script src="js/controllers/settingsCtrl.js"></script>
     <script src="js/controllers/aacService.js"></script>
   </head>
 
