--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -20,6 +20,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/mainCtrl.js"></script>
      <script src="js/controllers/settingsCtrl.js"></script>
+     <script src="js/controllers/boardFactoryCtrl.js"></script>
     <script src="js/controllers/aacService.js"></script>
   </head>
 
