--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -9,6 +9,7 @@
     <!-- compiled css output -->
     <!-- <link href="css/ionic.app.css" rel="stylesheet"> -->
     <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -16,10 +17,12 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
+    <script src="lib/ionic/js/angular-jwt.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers/mainCtrl.js"></script>
-     <script src="js/controllers/settingsCtrl.js"></script>
-     <script src="js/controllers/boardFactoryCtrl.js"></script>
+    <script src="js/controllers/settingsCtrl.js"></script>
+    <script src="js/controllers/boardFactoryCtrl.js"></script>
+    <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/aacService.js"></script>
   </head>
 
