Yellow submarine afloat

--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -9,6 +9,10 @@
     <!-- compiled css output -->
     <!-- <link href="css/ionic.app.css" rel="stylesheet"> -->
     <link href="css/ionic.app.css" rel="stylesheet">
+
+    <!--custom styles-->
+    <link href="css/style.css" rel="stylesheet">
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -21,7 +25,6 @@
      <script src="js/controllers/settingsCtrl.js"></script>
      <script src="js/controllers/boardFactoryCtrl.js"></script>
     <script src="js/controllers/aacService.js"></script>
-    <script src="http://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   </head>
 
   <body ng-app="main">
