--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -23,6 +23,7 @@
     <script src="js/controllers/settingsCtrl.js"></script>
     <script src="js/controllers/boardFactoryCtrl.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
+    <script src="js/controllers/aacService.js"></script>
   </head>
 
   <body ng-app="main">
