--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -13,6 +13,9 @@
     <!--custom styles-->
     <link href="css/style.css" rel="stylesheet">
 
+    <!--fontawesome icons-->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
