--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -21,7 +21,7 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/ngCordova/ng-cordova.min.js"></script>
 
     <!-- your app's js -->
     <script src="lib/ionic/js/angular-jwt.js"></script>
