--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/controllers/boardFactoryCtrl.js"></script>
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/aacService.js"></script>
+    <script src="js/controllers/sessionService.js"></script>
   </head>
 
   <body ng-app="main">
