--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -8,8 +8,8 @@
 
     <!-- compiled css output -->
     <!-- <link href="css/ionic.app.css" rel="stylesheet"> -->
-    <link href="css/ionic.app.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/ionic.app.min.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
 
     <!--custom styles-->
 
