--- a/aac-ionic/www/index.html
+++ b/aac-ionic/www/index.html
@@ -32,6 +32,7 @@
     <script src="js/controllers/loginCtrl.js"></script>
     <script src="js/controllers/aacService.js"></script>
     <script src="js/controllers/sessionService.js"></script>
+    <script src="js/controllers/analyticService.js"></script>
   </head>
 
   <body ng-app="main">
